@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.57 2003/01/10 07:46:02 cjep Exp $
+# $NetBSD: Makefile,v 1.58 2003/01/23 23:05:10 jlam Exp $
 #
 # The CUPS author is very good about taking back changes into the main
 # CUPS distribution.  The correct place to send patches or bug-fixes is:
@@ -6,6 +6,7 @@
 
 DISTNAME=		cups-${DIST_VERS}-source
 PKGNAME=		cups-${VERS}
+PKGREVISION=		1
 BASE_VERS=		1.1.18
 DIST_VERS=		${BASE_VERS}
 VERS=			${DIST_VERS:S/-/./g}
