@@ -1,11 +1,20 @@
 #!@RCD_SCRIPTS_SHELL@
 #
-# $NetBSD: cupsd.sh,v 1.14 2002/10/31 23:33:12 jlam Exp $
+# $NetBSD: cupsd.sh,v 1.15 2003/01/23 23:05:11 jlam Exp $
 #
 # Common UNIX Printing System daemon
 #
 # PROVIDE: cupsd
 # REQUIRE: DAEMON
+#
+# You will need to set some variables in /etc/rc.conf to start cupsd:
+#
+# cupsd=YES
+# cupsd_wait=YES	# set to "YES" to wait for cupsd to detect printers;
+#			#   this variable is optional and defaults to "NO".
+# cupsd_timeout=60	# set to the number of seconds we wait for cupsd
+#			#   to respond before we declare it not responding;
+#			#   this variable is optional and defaults to "60".
 
 if [ -f /etc/rc.subr ]
 then
@@ -15,9 +24,47 @@ fi
 name="cupsd"
 rcvar=${name}
 command="@PREFIX@/sbin/${name}"
+lpstat_command="@PREFIX@/bin/lpstat"
 command_args="& sleep 2"
 required_files="@PKG_SYSCONFDIR@/${name}.conf"
-extra_commands="reload"
+extra_commands="reload wait"
+wait_cmd="cupsd_waitcmd"
+start_postcmd="cupsd_poststart"
+
+[ -z "${cupsd_wait}" ] && cupsd_wait=NO
+[ -z "${cupsd_timeout}" ] && cupsd_timeout=60
+
+cupsd_poststart()
+{
+	if checkyesno cupsd_wait; then
+		$0 wait
+	fi
+}
+
+cupsd_waitcmd()
+{
+	if [ -x ${lpstat_command} ]; then
+		msg=
+		@ECHO@ -n "Waiting ${cupsd_timeout} seconds for ${name}: "
+		if ${lpstat_command} -r >/dev/null 2>&1; then
+			msg='responding'
+		else
+			master=$$
+			trap "msg='not responding'" ALRM
+			(sleep ${cupsd_timeout} && kill -ALRM $master) >/dev/null 2>&1 &
+			while [ -z "$msg" ]; do
+				if ${lpstat_command} -r >/dev/null 2>&1; then
+					msg='responding'
+					trap : ALRM
+				else
+					sleep 5
+					@ECHO@ -n '.'
+				fi
+			done
+		fi
+		@ECHO@ "$msg"
+	fi
+}
 
 if [ -f /etc/rc.subr ]
 then
